<resources>
    <string name="app_name">Learn Hub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_class">Class</string>
    <string name="title_course">Course</string>
    <string name="title_profile">Profile</string>
    <string name="txt_find_best_course">Cari Kursus Terbaik...</string>
    <string name="text_running_class">Kelas Berjalan</string>
    <string name="text_all">All</string>
    <string name="text_in_progress">In Progress</string>
    <string name="text_done">Selesai</string>
    <string name="text_categories">Kategori</string>
    <string name="text_category_class">UI/UX Design</string>
    <string name="text_rating">4.7</string>
    <string name="text_title_class">Memulai Prototyping dengan Figma dan Adobe XD</string>
    <string name="text_instructor">by Angela Doe</string>
    <string name="text_level">Intermediate</string>
    <string name="text_total_module">10 Module</string>
    <string name="text_duration">%s Menit</string>
    <string name="text_progress">0% Complete</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_contoh_johndoe_gmail_com">Contoh: johndoe@gmail.com</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_lupa_kata_sandi">Lupa kata sandi</string>
    <string name="text_masukkan_password">Masukkan password</string>
    <string name="text_belum_punya_akun_daftar_di_sini">Belum punya akun? Daftar di sini</string>
    <string name="text_masuk_tanpa_login">Masuk Tanpa Login</string>
    <string name="text_highlight_register">Daftar di sini</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_nama">Nama</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="txt_nomor_telepon">Nomor Telepon</string>
    <string name="text_plus62">+62</string>
    <string name="text_buat_password">Buat Password</string>
    <string name="text_sudah_punya_akun_masuk_di_sini">Sudah punya akun? Masuk di sini</string>
    <string name="text_highlight_login">Masuk di sini</string>
    <string name="text_password_string">LearnHub#123$^%</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_kirim_ulang">Kirim Ulang</string>
    <string name="text_kirim_ulang_otp_dalam">Kirim Ulang OTP dalam</string>
    <string name="text_masukkan_otp">Masukkan OTP</string>
    <string name="text_ketik_6_digit_kode_yang_dikirimkan_ke_email">Ketik 6 digit kode yang dikirimkan ke email </string>
    <string name="text_alamat_email_tidak_terdaftar">Alamat email tidak terdaftar!</string>
    <string name="text_masukkan_password_baru">Masukkan Password Baru</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_ulangi_password_baru">Ulangi Password Baru</string>
    <string name="text_beranda">Beranda</string>
    <string name="text_registrasi_nberhasil">Registrasi\nBerhasil</string>
    <string name="text_harga">Harga</string>
    <string name="text_ppn">PPN 11%</string>
    <string name="text_total_bayar">Total Bayar</string>
    <string name="text_lanjutkan">Lanjutkan</string>
    <string name="text_kelas_premium">Kelas Premium</string>
    <string name="text_selangkah_lagi_menuju">Selangkah lagi menuju</string>
    <string name="text_detail_pembayaran">Detail Pembayaran</string>
    <string name="text_beli_sekarang">Beli Sekarang</string>
    <string name="text_course_topic">Topik Kelas</string>
    <string name="text_filter">Filter</string>
    <string name="text_search_best_course">Cari kursus terbaik</string>
    <string name="text_greeting">Halo Learner!</string>
    <string name="text_greeting_description">Mau belajar apa hari ini?</string>
    <string name="text_hint_search_best_course">Cari kursus terbaik</string>
    <string name="text_last_course_title">Lanjutkan belajarmu!</string>
    <string name="text_empty_last_course">Kosong nih!</string>
    <string name="text_popular_course_title">Kursus Populer</string>
    <string name="hello">Hello %1$s</string>
    <string name="text_state_empty_title">Maaf!</string>
    <string name="text_error">Error</string>
    <string name="text_empty_class">Kelas belum tersedia</string>
    <string name="text_start_learning_desc">Mulai pelajaranmu sekarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_video">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4</string>
    <string name="text_premium">Premium</string>
    <string name="text_free">Free</string>
    <string name="text_submit">Submit</string>
    <string name="text_ppn_11">PPN 11%</string>
    <string name="About">Tentang</string>
    <string name="txt_class_material">Materi Kelas</string>
    <string name="tab_text_1">Tentang</string>
    <string name="tab_text_2">Materi Kelas</string>
    <string name="txt_sps_module">" Modul"</string>
    <string name="txt_sps_minutes">" Menit"</string>
    <string name="text_anda_perlu_masuk_untuk_mengakses_fitur_ini">Anda Perlu Masuk\nUntuk Mengakses\nFitur Ini</string>
    <string name="text_minimum_password_must_be_8_character">Minimum password must be 8 character</string>
    <string name="text_email_address_is_incorrect_format">Email address is incorrect format</string>
    <string name="text_email_cannot_be_empty">Email cannot be empty</string>
    <string name="text_name_cannot_be_empty">Name cannot be empty</string>
    <string name="text_maximum_50_characters">Maximum 50 characters</string>
    <string name="text_password_minimum_8_characters_and_maximum_12_characters">password minimum 8 characters and maximum 12 characters</string>
    <string name="text_name_cannot_be_longer_than_50_characters">Name cannot be longer than 50 characters</string>
    <string name="text_fill_out_the_form_correctly">Fill out the form correctly</string>
    <string name="text_phone_number_cannot_be_empty">Phone number cannot be empty</string>
    <string name="text_invalid_phone_number_length">Invalid phone number length</string>
    <string name="text_please_make_sure_you_ve_entered_the_complete_6_digit_otp_code">Please make sure you\'ve entered the complete 6-digit OTP code</string>
    <string name="text_password_and_confirm_password_do_not_match">Password and confirm password do not match</string>
    <string name="text_jwt_expired">jwt expired</string>
    <string name="text_60_detik">60 detik</string>
    <string name="text_detik">" detik"</string>
    <string name="text_kirim_ulang_otp">Kirim Ulang OTP</string>
    <string name="text_konfirmasi">Konfirmasi</string>
    <string name="text_apakah_anda_yakin_ingin_kembali">Apakah Anda yakin ingin kembali?</string>
    <string name="text_ya">Ya</string>
    <string name="text_tidak">Tidak</string>
    <string name="text_percent">" %"</string>
    <string name="text_complete">"Complete "</string>
    <string name="text_keluar">Keluar</string>
    <string name="text_apakah_anda_yakin_ingin_keluar">Apakah anda yakin ingin keluar?</string>
    <string name="text_logout_successfully">Logout successfully</string>
    <string name="hello_learner">Hello Learner!</string>
    <string name="text_login_to_buy_course">Login dulu untuk beli Kursus Ini</string>
    <string name="text_success">Success</string>
    <string name="text_pending">Pending</string>
    <string name="text_expired">Expired</string>
    <string name="edit_profile_success">Edit profile success</string>
    <string name="edit_profile_failed">Edit profile failed</string>
    <string name="login">Login</string>
    <string name="simpan_profil_saya">Simpan Profil Saya</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="kelas_ini_ditujukan_untuk">Kelas ini ditujukan untuk</string>
    <string name="tentang_kelas">Tentang Kelas</string>
    <string name="join_grup_telegram">Join Grup Telegram</string>
    <string name="kelas_premium">Kelas Premium</string>
    <string name="selangkah_lagi_menuju">Selangkah lagi menuju</string>
</resources>