<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cious.learnhub.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cious.learnhub.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my_class"
        android:name="com.cious.learnhub.ui.myclass.MyClassFragment"
        android:label="@string/title_my_class"
        tools:layout="@layout/fragment_my_class" />

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.cious.learnhub.ui.course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cious.learnhub.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"/>

</navigation>