<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginBottom="6dp"
    android:background="@color/white"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_class_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_category_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/dark_blue_100"
            android:textSize="11sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/ll_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_class_image"
            tools:text="@string/text_category_class" />

        <LinearLayout
            android:id="@+id/ll_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_class_image">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                tools:text="@string/text_rating" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_class"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_rate"
            tools:text="@string/text_title_class" />

        <TextView
            android:id="@+id/tv_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_class"
            tools:text="@string/text_instructor" />

        <LinearLayout
            android:id="@+id/ll_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instructor">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_level" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="10sp"
                tools:text="@string/text_level" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_modules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/ll_level"
            app:layout_constraintTop_toBottomOf="@id/tv_instructor">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_total_modules" />

            <TextView
                android:id="@+id/tv_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="10sp"
                tools:text="@string/text_total_module" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_level">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_duration" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="10sp"
                tools:text="@string/text_duration" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_duration">

            <ImageView
                android:id="@+id/iv_progress"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_progress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginStart="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:progressDrawable="@drawable/bg_progress_bar"
                app:layout_constraintStart_toEndOf="@id/iv_progress"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:text="30 %"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_progress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>