<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="12dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_registration_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/text_anda_perlu_masuk_untuk_mengakses_fitur_ini"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_registration_success"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/ic_padlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_success"
        tools:ignore="ContentDescription" />

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="102dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_masuk"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/iv_registration_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_intent_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="42dp"
        android:text="@string/text_belum_punya_akun_daftar_di_sini"
        android:textColor="@color/neutral_05"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>